--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,10 @@
 
 @font-face {
   font-family: "thedark";
-  src:url("https://manikanddan.github.io/wacken/font/thedark.ttf") format("truetype");
-  src:url("../font/thedark.eot"),
-  url("../font/thedark.woff") format("woff"),
-  url("../font/thedark.woff2") format("woff2");
+  src:url("./font/thedark.ttf") format("truetype");
+  src:url("./font/thedark.eot"),
+  url("./font/thedark.woff") format("woff"),
+  url("./font/thedark.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   
@@ -29,7 +29,7 @@
 
 @font-face {
   font-family: "Google-spies";
-  src:url("https://manikanddan.github.io/wacken/font/Google-spies.ttf") format("truetype");
+  src:url("./font/Google-spies.ttf") format("truetype");
   src:url("font/Google-spies.eot"),
   url("font/Google-spies.woff") format("woff"),
   url("font/Google-spies.woff2") format("woff2");
