--- a/css/main.css
+++ b/css/main.css
@@ -326,7 +326,6 @@ h3 {
 }
 
 
-
 /* MQ STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
@@ -363,5 +362,11 @@ h3 {
 
 	nav li a {
 		padding: 3px;
+	}
+	span {
+		font-size: 50%;
+	}
+	P {
+		font-size: 50%;
 	}
 }
